src/settings/Toggle.css
.Toggle label {
	display: flex;
	justify-content: space-between;
}

.Toggle.disabled label {
	color: var(--neutral-500);
}

.Toggle button {
	--width: 2.5rem;
	--height: calc(var(--width) / 2);
	display: inline-block;
	position: relative;
	width: var(--width);
	height: var(--height);
	background-color: var(--slate-300);
	border: none;
	border-radius: var(--height);
	transition: background-color 0.4s;
}

.Toggle button[aria-pressed="true"] {
	background-color: var(--green-500);
}

.Toggle.disabled button[aria-pressed="true"] {
	background-color: var(--slate-300);
}

.Toggle:focus-within {
	outline: 2px solid var(--blue-600);
	border-radius: 0.3em;
	padding-left: 0.3em;
	margin-left: -0.3em;
	padding-right: 0.3em;
	margin-right: -0.3em;
}

.Toggle button:focus {
	outline: none;
}

.Toggle button::after {
	content: "";
	width: calc(var(--height) * 0.9);
	height: calc(var(--height) * 0.9);
	border-radius: calc(var(--height) * 0.9);
	background-color: white;
	position: absolute;
	top: calc(var(--height) * 0.05);
	left: calc(var(--height) * 0.05);
	transition: transform 0.4s;
}

.Toggle button[aria-pressed="true"]::after {
	transform: translateX(var(--height));
}

